// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enums should properly generate NullsOrder enum type: NullsOrder 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum NullsOrder {
  first = \\"first\\",
  last = \\"last\\"
}
registerEnumType(NullsOrder, {
  name: \\"NullsOrder\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate NullsOrder enum type: enums index 1`] = `
"export { FirstModelScalarFieldEnum } from \\"./FirstModelScalarFieldEnum\\";
export { NullsOrder } from \\"./NullsOrder\\";
export { QueryMode } from \\"./QueryMode\\";
export { SecondModelScalarFieldEnum } from \\"./SecondModelScalarFieldEnum\\";
export { SortOrder } from \\"./SortOrder\\";
export { TransactionIsolationLevel } from \\"./TransactionIsolationLevel\\";
"
`;

exports[`enums should properly generate code for enum with docs 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

/** Role enum doc */
export enum Role {
  USER = \\"USER\\",
  ADMIN = \\"ADMIN\\"
}
registerEnumType(Role, {
  name: \\"Role\\",
  description: \\"Role enum doc\\",
});
"
`;

exports[`enums should properly generate code for enum with docs: enums index 1`] = `
"export { Role } from \\"./Role\\";
export { TransactionIsolationLevel } from \\"./TransactionIsolationLevel\\";
"
`;

exports[`enums should properly generate code for normal enum 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum Color {
  RED = \\"RED\\",
  GREEN = \\"GREEN\\",
  BLUE = \\"BLUE\\"
}
registerEnumType(Color, {
  name: \\"Color\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate model scalar enum when model field is renamed: SampleModelScalarFieldEnum 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum SampleModelScalarFieldEnum {
  intIdField = \\"intIdField\\",
  mappedFieldName = \\"stringField\\",
  intField = \\"intField\\"
}
registerEnumType(SampleModelScalarFieldEnum, {
  name: \\"SampleModelScalarFieldEnum\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate model scalar enum when model field is renamed: enums index 1`] = `
"export { QueryMode } from \\"./QueryMode\\";
export { SampleModelScalarFieldEnum } from \\"./SampleModelScalarFieldEnum\\";
export { SortOrder } from \\"./SortOrder\\";
export { TransactionIsolationLevel } from \\"./TransactionIsolationLevel\\";
"
`;

exports[`enums should properly generate model scalar enum when model is renamed: ExampleModelScalarFieldEnum 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum ExampleModelScalarFieldEnum {
  intIdField = \\"intIdField\\",
  stringField = \\"stringField\\",
  intField = \\"intField\\"
}
registerEnumType(ExampleModelScalarFieldEnum, {
  name: \\"ExampleModelScalarFieldEnum\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate model scalar enum when model is renamed: enums index 1`] = `
"export { ExampleModelScalarFieldEnum } from \\"./ExampleModelScalarFieldEnum\\";
export { QueryMode } from \\"./QueryMode\\";
export { SortOrder } from \\"./SortOrder\\";
export { TransactionIsolationLevel } from \\"./TransactionIsolationLevel\\";
"
`;

exports[`enums should properly generate model scalar field enum: SampleModelScalarFieldEnum 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum SampleModelScalarFieldEnum {
  intIdField = \\"intIdField\\",
  stringField = \\"stringField\\",
  intField = \\"intField\\"
}
registerEnumType(SampleModelScalarFieldEnum, {
  name: \\"SampleModelScalarFieldEnum\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate model scalar field enum: enums index 1`] = `
"export { QueryMode } from \\"./QueryMode\\";
export { SampleModelScalarFieldEnum } from \\"./SampleModelScalarFieldEnum\\";
export { SortOrder } from \\"./SortOrder\\";
export { TransactionIsolationLevel } from \\"./TransactionIsolationLevel\\";
"
`;

exports[`enums should properly generate standard prisma enums: JsonNullValueFilter 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum JsonNullValueFilter {
  DbNull = \\"DbNull\\",
  JsonNull = \\"JsonNull\\",
  AnyNull = \\"AnyNull\\"
}
registerEnumType(JsonNullValueFilter, {
  name: \\"JsonNullValueFilter\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate standard prisma enums: JsonNullValueInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum JsonNullValueInput {
  JsonNull = \\"JsonNull\\"
}
registerEnumType(JsonNullValueInput, {
  name: \\"JsonNullValueInput\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate standard prisma enums: QueryMode 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum QueryMode {
  \\"default\\" = \\"default\\",
  insensitive = \\"insensitive\\"
}
registerEnumType(QueryMode, {
  name: \\"QueryMode\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate standard prisma enums: SortOrder 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum SortOrder {
  asc = \\"asc\\",
  desc = \\"desc\\"
}
registerEnumType(SortOrder, {
  name: \\"SortOrder\\",
  description: undefined,
});
"
`;

exports[`enums should properly generate standard prisma enums: enums index 1`] = `
"export { JsonNullValueFilter } from \\"./JsonNullValueFilter\\";
export { JsonNullValueInput } from \\"./JsonNullValueInput\\";
export { NullableJsonNullValueInput } from \\"./NullableJsonNullValueInput\\";
export { NullsOrder } from \\"./NullsOrder\\";
export { QueryMode } from \\"./QueryMode\\";
export { SampleModelScalarFieldEnum } from \\"./SampleModelScalarFieldEnum\\";
export { SortOrder } from \\"./SortOrder\\";
export { TransactionIsolationLevel } from \\"./TransactionIsolationLevel\\";
"
`;

exports[`enums when \`fullTextSearch\` preview feature is enabled should properly generate enums for relevance: SampleModelOrderByRelevanceFieldEnum 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum SampleModelOrderByRelevanceFieldEnum {
  stringField = \\"stringField\\"
}
registerEnumType(SampleModelOrderByRelevanceFieldEnum, {
  name: \\"SampleModelOrderByRelevanceFieldEnum\\",
  description: undefined,
});
"
`;

exports[`enums when \`fullTextSearch\` preview feature is enabled when model is renamed should properly generate enums for relevance: SampleRenamedModelOrderByRelevanceFieldEnum 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";

export enum SampleRenamedModelOrderByRelevanceFieldEnum {
  stringField = \\"stringField\\"
}
registerEnumType(SampleRenamedModelOrderByRelevanceFieldEnum, {
  name: \\"SampleRenamedModelOrderByRelevanceFieldEnum\\",
  description: undefined,
});
"
`;
